[package]
name = "fasttensors"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.1", features = ["cuda"] }
io-uring = "0.6.4"
lru = "0.12.4"
memmap2 = "0.9.5"
once_cell = "1.20.0"
safetensors = "0.4.5"
serde_json = "1.0.128"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["fs", "io-util"] }
